<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.0</version>
		<relativePath/>
	</parent>

	<groupId>com.njumarket</groupId>
	<artifactId>njumarket</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>njumarket</name>
	<description>NJU Campus Second-hand Trading Platform</description>

	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2023.0.3</spring-cloud.version>
		<resilience4j.version>2.1.0</resilience4j.version>
		<!-- LangChain4j 核心库（langchain4j, langchain4j-open-ai 等稳定版） -->
		<langchain4j.version>1.0.1</langchain4j.version>
		<!-- LangChain4j Spring/Reactor 集成（spring-boot-starter, reactor，独立 beta 版本号） -->
		<langchain4j.spring.version>1.0.1-beta6</langchain4j.spring.version>
		<!-- Micrometer Tracing 版本由 Spring Boot 3.2.0 管理，不需要手动指定 -->
		<!-- <micrometer-tracing.version>1.2.1</micrometer-tracing.version> -->
		<!-- <zipkin-reporter.version>3.3.0</zipkin-reporter.version> -->
	</properties>

	<modules>
		<module>njumarket-common</module>
		<module>njumarket-discovery</module>
		<module>njumarket-config</module>
		<module>njumarket-gateway</module>
		<module>njumarket-service-auth</module>
		<module>njumarket-service-commodity</module>
		<module>njumarket-service-order</module>
		<module>njumarket-service-message</module>
		<module>njumarket-service-image</module>
		<module>njumarket-service-admin</module>
		<module>njumarket-service-notification</module>
		<module>njumarket-service-ai</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- LangChain4j 核心库（稳定版 1.0.1） -->
			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j</artifactId>
				<version>${langchain4j.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-open-ai</artifactId>
				<version>${langchain4j.version}</version>
			</dependency>
			<!-- LangChain4j Spring/Reactor 集成（独立 beta 版本 1.0.1-beta6） -->
			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-spring-boot-starter</artifactId>
				<version>${langchain4j.spring.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
				<version>${langchain4j.spring.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.langchain4j</groupId>
				<artifactId>langchain4j-reactor</artifactId>
				<version>${langchain4j.spring.version}</version>
			</dependency>
			<!-- Resilience4j 版本管理 -->
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-circuitbreaker</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-timelimiter</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<!-- Micrometer Tracing 版本由 Spring Boot 3.2.0 自动管理，不需要手动指定 -->
			<!-- 如果需要覆盖版本，可以取消注释以下配置 -->
			<!--
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-tracing-bom</artifactId>
				<version>1.2.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.zipkin.reporter2</groupId>
				<artifactId>zipkin-reporter-bom</artifactId>
				<version>3.3.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			-->
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo1.maven.org/maven2</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
		<!-- Spring 官方公开仓库，免鉴权 -->
		<repository>
			<id>spring-maven-public</id>
			<name>Spring Maven Public</name>
			<url>https://repo.spring.io/maven-public</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<parameters>true</parameters>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>1.18.30</version>
							</path>
							<path>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-configuration-processor</artifactId>
								<version>3.2.0</version>
							</path>
						</annotationProcessorPaths>
						<compilerArgs>
							<arg>-Xlint:-processing</arg>
							<arg>-Xlint:-auxiliaryclass</arg>
						</compilerArgs>
						<showWarnings>true</showWarnings>
						<failOnWarning>false</failOnWarning>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
